<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/Notebook"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_payment"
        android:orderInCategory="100"
        android:title="@string/payment"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_addresses"
        android:orderInCategory="100"
        android:title="@string/addresses"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_tasks"
        android:orderInCategory="100"
        android:title="@string/tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_subscription"
        android:orderInCategory="100"
        android:title="@string/subscription"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_view"
        android:orderInCategory="100"
        android:title="@string/view"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_jellyfish"
        android:orderInCategory="100"
        android:title="@string/jellyfish"
        app:showAsAction="never" />


</menu>